feat: start create media module
- implement controllers, dto, services, entities, enums, repositories, file storage
- implement simple test